<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_main"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:paddingTop="50dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="233dp"
        android:layout_height="241dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/loginUsernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C5C6C7"
            android:hint="@string/usernameHint"
            android:textColor="#C5C6C7"
            android:textColorHighlight="@color/edittextunderline"
            android:textColorHint="#C5C6C7" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/loginInputUsername"
        tools:layout_editor_absoluteX="36dp">

        <EditText
            android:id="@+id/loginPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C5C6C7"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColor="#C5C6C7"
            android:textColorHighlight="@color/edittextunderline"
            android:textColorHint="#C5C6C7" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginLoginBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/submit_btn_bg"
        android:text="@string/loginLoginBtn"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputPassword" />

    <Button
        android:id="@+id/loginRegisterBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:text="@string/loginRegisterBtn"
        android:textColor="#C5C6C7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLoginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>