<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/bg_main">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="194dp"
        android:layout_height="178dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/avatar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="28dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/registerUsernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#C5C6C7"
                android:inputType="text"
                android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:ems="10"
                android:hint="@string/usernameHint"
                android:textColor="#C5C6C7"
                android:textColorHighlight="@color/edittextunderline"
                android:textColorHint="#C5C6C7" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/registerEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#C5C6C7"
                android:ems="10"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:textColor="#C5C6C7"
                android:textColorHighlight="@color/edittextunderline"
                android:textColorHint="#C5C6C7" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/registerPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#C5C6C7"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:textColor="#C5C6C7"
                android:textColorHighlight="@color/edittextunderline"
                android:textColorHint="#C5C6C7" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_input_layout_confirmpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/registerConfirmPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#C5C6C7"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="#C5C6C7"
                android:textColorHighlight="@color/edittextunderline"
                android:textColorHint="#C5C6C7" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/submit_btn_bg"
            android:text="@string/registerBtn"
            android:textColor="#C5C6C7" />

        <Button
            android:id="@+id/btn_link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@null"
            android:text="@string/registerLoginBtn"
            android:textColor="#C5C6C7" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>